# TEB_controller_plugin

./: CMakeLists.txt  README.md  package.xml  teb_controller_plugin.xml
include/teb_controller_plugin/: teb_controller.hpp
src/: teb_controller.cpp
teb_algorithm/: CMakeLists.txt  README.md  log.txt  main.cpp
teb_algorithm/include/: base_teb_edges.h  edge_goal_pose.h  edge_obstacle_edge.h  edge_via_point.h  jerk_edge.h  kinetic_edge.h  planner_manager.h  tools.h  velocityEdge.h  vertexPoint.h  vertexTImeDiff.h
teb_algorithm/matplotlib-cpp/: matplotlibcpp.h
teb_algorithm/src/: planner_manager.cpp
